--- a/hw1_regression.ipynb
+++ b/hw1_regression.ipynb
@@ -55,13 +55,13 @@
         "import sys\n",
         "import pandas as pd\n",
         "import numpy as np\n",
-        "from google.colab import drive \n",
-        "!gdown --id '1wNKAxQ29G15kgpBy_asjTcZRRgmsCZRm' --output data.zip\n",
-        "!unzip data.zip\n",
+        "#from google.colab import drive \n",
+        "#!gdown --id '1wNKAxQ29G15kgpBy_asjTcZRRgmsCZRm' --output data.zip\n",
+        "#unzip data.zip\n",
         "# data = pd.read_csv('gdrive/My Drive/hw1-regression/train.csv', header = None, encoding = 'big5')\n",
         "data = pd.read_csv('./train.csv', encoding = 'big5')"
       ],
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -85,7 +85,7 @@
         "data[data == 'NR'] = 0\n",
         "raw_data = data.to_numpy()"
       ],
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -114,7 +114,7 @@
         "        sample[:, day * 24 : (day + 1) * 24] = raw_data[18 * (20 * month + day) : 18 * (20 * month + day + 1), :]\n",
         "    month_data[month] = sample"
       ],
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": []
     },
     {
